--- a/Pipfile
+++ b/Pipfile
@@ -1,18 +1,15 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 
-
 [packages]
-
 django = "*"
 gunicorn = "*"
 django-heroku = "*"
 tweepy = "*"
 requests = "*"
 datetime = "*"
+environ = "*"
 
 [requires]
-
 python_version = "3.6"
